--- a/Templates/home.html
+++ b/Templates/home.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<title>Home</title>
+{% block content %}
 
-</body>
-</html>
+<h1> Home page </h1>
+
+<p> This is a template </p>
+
+{% endblock %}
